--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "this is a learnig react project of Ashish Kumar",
-  "main": "App.js",
+
   "scripts": {
     "test": "jest"
   },
@@ -18,6 +18,15 @@
   "author": "Ashish Kumar",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.12.0"
-  }
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "browserslist":[
+   "last 2 versions"
+
+  ]
 }
