--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "this is a learnig react project of Ashish Kumar",
-
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -23,10 +24,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
-  "browserslist":[
-   "last 2 versions"
-
+  "browserslist": [
+    "last 2 versions"
   ]
 }
